<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TeamTrainer</string>
    <string name="action_remove">Remove</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="team_description_hint">Enter Description</string>
    <string name="team_club_hint">Enter Club</string>
    <string name="team_sport_hint">Enter Sport</string>
    <string name="warning_back">Hit Back again to Cancel</string>
    <string name="action_add_player">Add Player</string>
    <string name="player_first_name_hint">Enter First Name</string>
    <string name="player_last_name_hint">Enter Last Name</string>
    <string name="player_nr_hint">Enter Player Number (Not Required)</string>
    <string name="player_list_indicator">Players</string>
    <string name="match_list_indicator">Matches</string>
    <string name="team_list_indicator">Teams</string>
    <string name="player_address_hint">Enter Address (Not Required)</string>
    <string name="player_phone_hint">Phone Number (Not Reqired)</string>
    <string name="player_email_hint">E-Mail (Not Required)</string>
    <string name="action_edit">Edit</string>
    <string name="action_move_player">Move Player to different Team</string>
    <string name="player_number_label">Number</string>
    <string name="player_address_label">Address</string>
    <string name="player_email_label">E-Mail</string>
    <string name="player_phone_label">Phone Number</string>
    <string name="action_add_team">Add Team</string>
    <string name="warning_delete">Should the Team Deleted (NOT Reversible) or Hidden?</string>
    <string name="action_delete">Delete</string>
    <string name="action_hide">Hide</string>
    <string name="action_unhide_all">Unhide All Teams</string>
    <string name="action_unhide">Unhide Team</string>
    <string name="action_add_match">Add Match</string>
    <string name="match_date_hint">Enter Date</string>
    <string name="match_opponent_hint">Enter Opponent</string>
    <string name="match_homegame_switch">Homegame</string>
    <string name="match_referee_hint">Enter Referee</string>
    <string name="match_location_hint">Enter Location</string>
    <string name="colon" translatable="false">:</string>
    <string name="match_referee_label">Referee</string>
    <string name="match_location_label">Location</string>
    <string name="match_date_label">Date</string>
    <string name="empty" translatable="false"></string>
    <string name="match_homegame_true">Home game</string>
    <string name="match_homegame_false">Away game</string>
</resources>
