<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewTeamActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/teamDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_description_hint"
                android:inputType="textShortMessage" />

            <EditText
                android:id="@+id/teamClub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_club_hint"
                android:inputType="textShortMessage" />

            <EditText
                android:id="@+id/teamSport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_sport_hint"
                android:inputType="textShortMessage" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_cancel" />

        <Button
            android:id="@+id/confirmButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_confirm" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>