<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.widget.DatePicker
                    android:id="@+id/matchDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:datePickerMode="calendar" />
            </LinearLayout>

            <EditText
                android:id="@+id/matchOpponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/match_opponent_hint"
                android:importantForAutofill="no"
                android:inputType="textShortMessage" />


            <EditText
                android:id="@+id/matchReferee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/match_referee_hint"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/matchLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/match_location_hint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <Switch
                android:id="@+id/matchHomegame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/match_homegame_switch"
                android:textSize="24sp" />


        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_cancel" />

        <Button
            android:id="@+id/confirmButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_confirm" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>