<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/playerFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            tools:text="John" />

        <TextView
            android:id="@+id/playerLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            tools:text="Doe" />
    </LinearLayout>


    <TextView
        android:id="@+id/playerTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        tools:text="Test Team"/>

    <LinearLayout
        android:id="@+id/playerNumberContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="visible">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTextAccent" />

        <TextView
            android:id="@+id/playerNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            tools:text="1" />

        <TextView
            android:id="@+id/playerNumberLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_number_label"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerAddressContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTextAccent" />

        <TextView
            android:id="@+id/playerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            tools:text="123 Main St Anytown, USA" />

        <TextView
            android:id="@+id/playerAddressLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_address_label"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerEmailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTextAccent" />

        <TextView
            android:id="@+id/playerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            tools:text="john.doe@email.web" />

        <TextView
            android:id="@+id/playerEmailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_email_label"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/playerPhoneContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTextAccent" />

        <TextView
            android:id="@+id/playerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            tools:text="012 456 7891011" />

        <TextView
            android:id="@+id/playerPhoneLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_phone_label"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>